--- a/HW3/registration.htm
+++ b/HW3/registration.htm
@@ -95,7 +95,7 @@
 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"></div>
 
 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-<form method="POST" action="calculator.html" id="usrform" onsubmit="return Direct(this);">
+<form method="POST" action="calculator.htm" id="usrform" onsubmit="return Direct(this);">
 
 <div align="center">
 <table width="100%">
