--- a/registration.html
+++ b/registration.html
@@ -95,7 +95,7 @@
 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"></div>
 
 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-<form id="usrform" onsubmit="return Direct(this);" action="calculator.htm"  >
+<form id="usrform" onsubmit="return Direct(this);" action="https://aymaptimispraym.github.io/calculator.html"  >
 
 <div align="center">
 <table width="100%">
